--- a/locales/en-US/copyright.properties
+++ b/locales/en-US/copyright.properties
@@ -47,5 +47,7 @@ legal=Legal
 privacy_policy=Privacy Policy
 donate=Donate
 cookies=Cookies
+share_this_page=Share this page
+join_the_conversation=Join the Conversation
 
 lang_selector=Page language:
