Capitalization + footer strings change

--- a/locales/en-US/copyright.properties
+++ b/locales/en-US/copyright.properties
@@ -1,9 +1,8 @@
 # Strings for the new Copyright website. Mock-up: https://cloud.githubusercontent.com/assets/20977376/23233983/a5625994-f91e-11e6-8d0e-a31d49dee82b.png
 
 # Nav header
-nav_copyright_campaign=COPYRIGHT CAMPAIGN
-nav_more_resources=MORE RESOURCES
-nav_get_involved=GET INVOLVED
+nav_copyright_campaign2=Copyright Campaign
+nav_get_involved2=Get Involved
 
 main_title=Stand up for the internet we love
 tagline=Right now an epic battle is playing out over Copyright Reform. Key things that make the internet awesome are at stake.
@@ -23,7 +22,7 @@ now_what_title=Now What?
 now_what_tagline=Stand with Mozilla and defend the internet for people
 now_what_description=European policy makers are making important decisions around copyright right now. Institutions like major press publishers and the recording industry are pushing their self-serving agenda. If policy makers give in to their demands, many parts of the internet that we know and love, will die. Let’s fight back to keep the Web open and healthy.
 
-take_action_headline=READY TO TAKE ACTION?
+take_action_headline2=Ready to Take Action?
 take_action_description=Want easy, fun, and impactful ways to be involved in the fight around copyright sent straight to your inbox? Sign up to receive online action opportunities online, awesome event invitations and great training opportunities. We’re building a real movement to win this - don’t miss out!
 
 # Sign up form
@@ -42,12 +41,8 @@ sign_up_button=SIGN ME UP
 # Footer
 footer_description=Mozilla is a global non-profit dedicated to putting you in control of your online experience and shaping the future of the web for the public good. Visit us at <a href="https://www.mozilla.org/">mozilla.org</a>.
 contact_us=Contact Us
-code_of_conduct=Code of Conduct
+share_this_page=Share this page
+join_the_conversation=Join the Conversation
 legal=Legal
 privacy_policy=Privacy Policy
 donate=Donate
-cookies=Cookies
-share_this_page=Share this page
-join_the_conversation=Join the Conversation
-
-lang_selector=Page language:
