Add error messages

--- a/locales/en-US/copyright.properties
+++ b/locales/en-US/copyright.properties
@@ -38,6 +38,11 @@ link_pp=Privacy Policy
 # Sign up button
 sign_up_button=SIGN ME UP
 
+# Error messages
+please_complete=This field is required.
+email_invalid=Please enter a valid email address.
+try_again_later=Something seems to have gone wrong. Please try again later.
+
 # Footer
 footer_description=Mozilla is a global non-profit dedicated to putting you in control of your online experience and shaping the future of the web for the public good. Visit us at <a href="https://www.mozilla.org/">mozilla.org</a>.
 contact_us=Contact Us
