Fix typo in sign up notice

--- a/locales/en-US/copyright.properties
+++ b/locales/en-US/copyright.properties
@@ -31,7 +31,7 @@ last_name=Last Name
 email=Email (required)
 country=Country
 
-sign_up_notice=By signing, you accept {linkTerms} and {linkPrivacyPolicy}, and agree to receive occasional emails about campaigns from Mozilla. You can unsubscribe at any time.
+sign_up_notice2=By signing up, you accept {linkTerms} and {linkPrivacyPolicy}, and agree to receive occasional emails about campaigns from Mozilla. You can unsubscribe at any time.
 link_tos=Mozilla’s Terms of Service
 link_pp=Privacy Policy
 
