One more footer change, fixing resources nav

--- a/locales/en-US/copyright.properties
+++ b/locales/en-US/copyright.properties
@@ -47,7 +47,7 @@ try_again_later=Something seems to have gone wrong. Please try again later.
 footer_description=Mozilla is a global non-profit dedicated to putting you in control of your online experience and shaping the future of the web for the public good. Visit us at <a href="https://www.mozilla.org/">mozilla.org</a>.
 contact_us=Contact Us
 share_this_page=Share this page
-join_the_conversation=Join the Conversation
+follow=Follow
 legal=Legal
 privacy_policy=Privacy Policy
 donate=Donate
