Expose new strings

--- a/locales/en-US/copyright.properties
+++ b/locales/en-US/copyright.properties
@@ -1,4 +1,4 @@
-# Strings for the new Copyright website. Mock-up: https://cloud.githubusercontent.com/assets/20977376/23233983/a5625994-f91e-11e6-8d0e-a31d49dee82b.png
+# Strings for the new Copyright website. Staging: https://changecopyright-org-staging.herokuapp.com
 
 # Nav header
 nav_copyright_campaign2=Copyright Campaign
@@ -31,12 +31,13 @@ last_name=Last Name
 email=Email (required)
 country=Country
 
-sign_up_notice2=By signing up, you accept {linkTerms} and {linkPrivacyPolicy}, and agree to receive occasional emails about campaigns from Mozilla. You can unsubscribe at any time.
-link_tos=Mozilla’s Terms of Service
-link_pp=Privacy Policy
+signup_checkbox=Yes, I want to receive email updates about Mozilla’s campaigns.
+sign_up_notice=I’m okay with Mozilla handling my info as explained in this {linkPrivacyNotice}.*
+link_pn=Privacy Notice
 
 # Sign up button
 sign_up_button=SIGN ME UP
+
 
 # Error messages
 please_complete=This field is required.
@@ -49,5 +50,5 @@ contact_us=Contact Us
 share_this_page=Share this page
 follow=Follow
 legal=Legal
-privacy_policy=Privacy Policy
+privacy=Privacy
 donate=Donate
