--- a/locales/en-US/share.properties
+++ b/locales/en-US/share.properties
@@ -1,14 +1,15 @@
-## NOTE: Page displayed after signin up
+## NOTE: Page displayed after signing up
 
 title=Thanks for signing up!
 headline=Will you use one of the buttons below to spread the word?
 
-
+# Message when sharing via email
 share_email_subject=Check this out:
 share_email_body_1=Hey —
 share_email_body_2=I know you love the Internet — I do too! That’s why I signed up to be part of the movement for copyright reform. You can learn more and join here {emailLink}
 share_email_body_3=Thanks —
 
+# Message when sharing via Facebook
 fb_share_title_a=Together we can keep the web awesome
 fb_share_desc_a=Join the movement for copyright reform and stand up for creativity! {fbLink}
 
