--- a/locales/en-US/share.properties
+++ b/locales/en-US/share.properties
@@ -3,6 +3,13 @@
 title=Thanks for signing up!
 headline=Will you use one of the buttons below to spread the word?
 
+# Alt text for button
+share_email_tooltip=Share by email
+# Alt text for button
+share_fb_tooltip=Post to Facebook
+# Alt text for button
+share_twitter_tooltip=Share on Twitter
+
 # Message when sharing via email
 share_email_subject=Check this out:
 share_email_body_1=Hey —
