Add a note about email subject

--- a/locales/en-US/share.properties
+++ b/locales/en-US/share.properties
@@ -10,7 +10,7 @@ share_fb_tooltip=Post to Facebook
 # Alt text for button
 share_twitter_tooltip=Share on Twitter
 
-# Message when sharing via email
+# Message when sharing via email, feel free to rephrase the subject so that it looks legit
 share_email_subject=Check this out:
 share_email_body_1=Hey —
 share_email_body_2=I know you love the Internet — I do too! That’s why I signed up to be part of the movement for copyright reform. You can learn more and join here {emailLink}
