Localize country list

--- a/locales/en-US/copyright.properties
+++ b/locales/en-US/copyright.properties
@@ -30,6 +30,7 @@ first_name=First Name
 last_name=Last Name
 email=Email (required)
 country=Country
+country_other=Other
 
 signup_checkbox=Yes, I want to receive email updates about Mozilla’s campaigns.
 sign_up_notice=I’m okay with Mozilla handling my info as explained in this {linkPrivacyNotice}.*
