--- a/locales/en-US/copyright.properties
+++ b/locales/en-US/copyright.properties
@@ -33,6 +33,8 @@ country=Country
 country_other=Other
 
 signup_checkbox=Yes, I want to receive email updates about Mozilla’s campaigns.
+
+# {linkPrivacyNotice} will be replaced with the translation of link_pn.
 sign_up_notice=I’m okay with Mozilla handling my info as explained in this {linkPrivacyNotice}.*
 link_pn=Privacy Notice
 
