Learn more strings

--- a/locales/en-US/impact.properties
+++ b/locales/en-US/impact.properties
@@ -5,7 +5,6 @@ impact_technologist=I am a Technologist
 impact_creator_innovator=I am a Creator / Innovator
 impact_scientist_librarian=I am a Scientist / Librarian
 
-learn_more_page_title=What’s being debated?
 article_explanation_subtitle=What does this mean?
 our_fight_explanation_subtitle=What are we fighting for?
 
@@ -33,12 +32,16 @@ technologist_article_13_fight1=Article 13 should be rejected. It would impose an
 technologist_article_13_fight2=And in practice, it would greatly harm the free expression of internet users, creators and innovators who use these online platforms, as online services will be incentivised to remove or prevent user generated content altogether.
 technologist_article_13_fight3=The cumulation of the elements in Article 13, if adopted, would ultimately undermine the opportunities and innovative potential that the internet offers.
 
+technologist_learn_more=For more detail, read C4C’s facstheet (PDF, in English).
+
 creator_innovator_section=Creator / Innovator
 creator_innovator_ugc_title=A new exception for User Generated Content (UGC).
 creator_innovator_ugc_desc1=We ask the MEPs to consider adding a pan-European UGC exception. Currently, the laws regarding remixability are fragmented across the EU — what is protected under parody (with no commercial harm) in one country might be illegal in another.
 creator_innovator_ugc_desc2=Moreover, our open source ethos is being threatened — an open internet is strongest when people can build and improve on each others’ creations.
 
 creator_innovator_ugc_fight=We believe that including a harmonised, new exception to allow a natural person to use a work in the creation of a new work would help make copyright law future-proof by design, and promote openness and creativity for all of Europe.
+
+creator_innovator_learn_more=For more details, read Communia’s analysis on UGC (in English).
 
 scientist_librarian_section=Scientist / Librarian
 scientist_librarian_article_3_title=Article 3: Text and Data Mining
@@ -48,3 +51,5 @@ scientist_librarian_article_3_desc2=The draft copyright directive proposes to ad
 scientist_librarian_article_3_fight1=To be effective the TDM exception must be broader. The proposed exception is too limited to realise the benefits of TDM for competitiveness, innovation and knowledge.
 scientist_librarian_article_3_fight2=It should include the many other stakeholders that use mining techniques to learn, read, and educate — people like independent researchers, advocacy groups, journalists, librarians, and startups.
 scientist_librarian_article_3_fight3=TDM is widely permitted outside of Europe, and has helped discover a range of new applications and innovations, without undermining core copyright protections.
+
+scientist_librarian_learn_more=For more detail, read LIBER’s explanation (in English).
