Export first set of strings for site update (#87)

--- a/locales/en-US/copyright.properties
+++ b/locales/en-US/copyright.properties
@@ -33,12 +33,54 @@ country=Country
 country_other=Other
 
 signup_checkbox=Yes, I want to receive email updates about Mozilla’s campaigns.
+
+# {linkPrivacyNotice} will be replaced with the translation of link_pn.
 sign_up_notice=I’m okay with Mozilla handling my info as explained in this {linkPrivacyNotice}.*
 link_pn=Privacy Notice
 
 # Sign up button
 sign_up_button=SIGN ME UP
 
+
+###################################################
+# Website update for September
+#
+# Mockup: https://redpen.io/cp4435967f9a4ff3b0
+###################################################
+
+
+nav_fix_copyright=Fix Copyright
+nav_impact=Impact
+nav_call_now=Call Now
+
+main_title_digital_age=Stand Up for Copyright in the Digital Age
+epic_battle_tagline=Right now, an epic battle is playing out over copyright reform in the EU.
+main_title_desc=Members of the European Parliament (MEPs) need to hear from you before they vote on 11 October: tell them why we need copyright laws that promote competition, innovation, and a vibrant online economy.
+
+# Call to action
+call_your_MEP=Call your MEP
+cta_tagline=We’ll provide you with what to say
+
+# {ctaTosLink} will be replaced with cta_link_tos translation and {ctaPpLink} will be replaced with cta_link_pp translation.
+cta_disclaimer=We will only use your phone number to make this call. Find out more about {ctaTosLink} and {ctaPpLink}
+cta_link_tos=Mozilla’s Terms of Service
+cta_link_pp=Privacy Policy
+
+explanation_title=How will this impact me?
+explanation_technologist=Technologist
+explanation_technologist_desc=The proposal would make sharing and accessing news online more difficult. It would force most online platforms to monitor all content you post — like YouTube videos, Facebook comments, and DeviantArt submissions.
+explanation_creator_innovator=Creator / Innovator
+explanation_creator_innovator_desc=Everyone in Europe should have the right to remix, create parodies, and share their ideas online — all the forms of expression that makes the internet wonderful. The current proposal doesn’t include an exception for everyday user generated content.
+explanation_scientists_librarian=Scientist / Librarian
+explanation_scientists_librarian_desc=The proposal only allows scientific research institutions to mine text and datasets, but we think more people — like librarians, journalists, and independent scientists — should be able to access the information they need to discover innovative solutions for Europe.
+explanation_learn_more=(Learn more)
+
+join_newsletter=Join our Newsletter
+join_newsletter_desc=Keep updated on copyright and other issues affecting Internet Health
+newsletter_placeholder=Email address
+subscrib_button=Subscribe
+newsletter_notice=I’m okay with Mozilla handling my info as explained in {linkPrivacyNoticeNewsletter}.
+newsletter_link_pn=this Privacy Notice
 
 # Error messages
 please_complete=This field is required.
