Update wireframe URLs

--- a/locales/en-US/copyright.properties
+++ b/locales/en-US/copyright.properties
@@ -45,7 +45,7 @@ sign_up_button=SIGN ME UP
 ###################################################
 # Website update for September
 #
-# Mockup: https://redpen.io/cp4435967f9a4ff3b0
+# Mockup: https://redpen.io/p/gdc9521eded436818e
 ###################################################
 
 
