--- a/locales/es/impact.properties
+++ b/locales/es/impact.properties
@@ -1,4 +1,4 @@
-# Strings used in the Impact page https://redpen.io/br565e7f7003783b85
+# Strings used in the Impact page https://redpen.io/bw52b436f058ac192f
 
 impact_main_title=¿Cómo me afectará?
 impact_technologist=Soy tecnólogo
@@ -22,8 +22,3 @@ technologist_article_11_desc3=Y lo peor de todo, ¡estas restricciones durarían
 
 
 creator_innovator_section=Creador / innovador
-
-
-
-
-
