--- a/locales/it/copyright.properties
+++ b/locales/it/copyright.properties
@@ -45,7 +45,7 @@ sign_up_button=ISCRIVIMI
 ###################################################
 # Website update for September
 #
-# Mockup: https://redpen.io/cp4435967f9a4ff3b0
+# Mockup: https://redpen.io/bw52b436f058ac192f
 ###################################################
 
 
