--- a/locales/it/impact.properties
+++ b/locales/it/impact.properties
@@ -1,4 +1,4 @@
-# Strings used in the Impact page https://redpen.io/br565e7f7003783b85
+# Strings used in the Impact page https://redpen.io/bw52b436f058ac192f
 
 impact_main_title=Quali effetti avrà la riforma su di me?
 impact_technologist=Sono un esperto del mondo digitale
