--- a/locales/fr/impact.properties
+++ b/locales/fr/impact.properties
@@ -1,4 +1,4 @@
-# Strings used in the Impact page https://redpen.io/br565e7f7003783b85
+# Strings used in the Impact page https://redpen.io/bw52b436f058ac192f
 
 impact_main_title=Quelles seront les conséquences pour moi ?
 impact_technologist=Je suis un utilisateur des nouvelles technologies
