Second set of strings

--- a/locales/en-US/call_tool.properties
+++ b/locales/en-US/call_tool.properties
@@ -2,3 +2,26 @@
 
 # This string will be audio recorded
 voice_over_call_tool=You are now being connected to a Member of the European Parliament that is working on Copyright Reform. Feel free to follow the script provided. Thank you for sharing your story.
+
+call_tool_headline=Here’s how to make the call
+script_step_1=Make sure you have your phone nearby.
+script_step_2=Enter your phone number in the box below and click the “call now” button.
+script_step_3=Answer your phone when it rings, and you’ll be connected to a Member of European Parliament (MEP).
+script_step_4=Read the script below:
+
+script_desc_1=“Hi, I’m <b>[first name, last name]</b> and I’m from <b>[city, country]</b>.”
+script_desc_2=“I want to discuss the copyright reform. I am a <b>[technologist, creator, scientist, journalist, librarian, artist, etc.]</b> and I believe the European Commission’s proposed copyright directive harms innovation and creativity in the EU.”
+script_desc_3=“Please reject articles 11 and 13” or “Please include an exception for user generated content. The future of European innovation depends on you.”
+script_desc_4=“Thank you for your time and commitment to an improved copyright directive for Europe’s Digital Single Market.”
+
+enter_phone_title=Enter your phone number and get a call back immediately
+enter_phone=Enter your phone #
+calling_headline=Calling your phone now!
+calling_tagline=Thank you for calling! Multiply your impact by sharing after your call.
+share_button=SHARE
+
+# {callAgain} will be replaced with the translation of call_again_link
+call_again=Didn’t get through? {callAgain}
+call_again_link=Try calling again.
+
+whoops_phone_number=Whoops! Make sure you enter your correct phone number.
