--- a/locales/en-US/copyright.properties
+++ b/locales/en-US/copyright.properties
@@ -32,8 +32,6 @@ email=Email (required)
 country=Country
 country_other=Other
 
-signup_checkbox=Yes, I want to receive email updates about Mozilla’s campaigns.
-
 # {linkPrivacyNotice} will be replaced with the translation of link_pn.
 sign_up_notice=I’m okay with Mozilla handling my info as explained in this {linkPrivacyNotice}.*
 link_pn=Privacy Notice
@@ -54,12 +52,12 @@ nav_impact=Impact
 nav_call_now=Call Now
 
 main_title_digital_age=Stand Up for Copyright in the Digital Age
-epic_battle_tagline=Right now, an epic battle is playing out over copyright reform in the EU.
-main_title_desc=Members of the European Parliament (MEPs) need to hear from you before they vote on 11 October: tell them why we need copyright laws that promote competition, innovation, and a vibrant online economy.
+epic_battle_tagline_mep=Members of the European Parliament need to hear from you.
+main_title_description=Call Members of the European Parliament before 10 October, tell them we need copyright laws that promote competition & innovation online.
 
 # Call to action
-call_your_MEP=Call your MEP
-cta_tagline=We’ll provide you with what to say
+call_now_button=CALL NOW
+cta_tagline_calling=We’ll provide you with what to say before calling.
 
 # {ctaTosLink} will be replaced with cta_link_tos translation and {ctaPpLink} will be replaced with cta_link_pp translation.
 cta_disclaimer=We will only use your phone number to make this call. Find out more about {ctaTosLink} and {ctaPpLink}
@@ -75,12 +73,13 @@ explanation_scientists_librarian=Scientist / Librarian
 explanation_scientists_librarian_desc=The proposal only allows scientific research institutions to mine text and datasets, but we think more people — like librarians, journalists, and independent scientists — should be able to access the information they need to discover innovative solutions for Europe.
 explanation_learn_more=(Learn more)
 
-join_newsletter=Join our Newsletter
-join_newsletter_desc=Keep updated on copyright and other issues affecting Internet Health
+join_newsletter=Join our newsletter
+join_newsletter_desc=Keep updated on copyright and other issues affecting Internet health
 newsletter_placeholder=Email address
 subscrib_button=Subscribe
+signup_checkbox=Yes, I want to receive email updates about Mozilla’s campaigns.
 newsletter_notice=I’m okay with Mozilla handling my info as explained in {linkPrivacyNoticeNewsletter}.
-newsletter_link_pn=this Privacy Notice
+newsletter_link_pn=this Privacy Notice.
 
 # Error messages
 please_complete=This field is required.
