Second set of strings (#89)

--- a/locales/en-US/share.properties
+++ b/locales/en-US/share.properties
@@ -3,12 +3,6 @@
 title=Thanks for signing up!
 headline=Will you use one of the buttons below to spread the word?
 
-# Alt text for button
-share_email_tooltip=Share by email
-# Alt text for button
-share_fb_tooltip=Post to Facebook
-# Alt text for button
-share_twitter_tooltip=Share on Twitter
 
 # Message when sharing via email, feel free to rephrase the subject so that it looks legit
 share_email_subject=Check this out:
@@ -27,3 +21,15 @@ fb_share_desc_b=You may not have heard much about copyright reform — but it’
 twitter_share_a=You may not have heard much about copyright reform — find out why it’s a big deal {twitterLink} @mozilla
 # Used in a tweet, please keep under 130 characters (including the link variable)
 twitter_share_b=Love the web? Then find out more about how copyright reform could impact it. @mozilla {twitterLink}
+
+
+###################################################
+# Content for September update
+###################################################
+
+# Alt text for button
+share_email_tooltip=Share by email
+# Alt text for button
+share_fb_tooltip=Post to Facebook
+# Alt text for button
+share_twitter_tooltip=Share on Twitter
