Add social strings

--- a/locales/en-US/share.properties
+++ b/locales/en-US/share.properties
@@ -33,3 +33,25 @@ share_email_tooltip=Share by email
 share_fb_tooltip=Post to Facebook
 # Alt text for button
 share_twitter_tooltip=Share on Twitter
+
+sharing_fb_title_a=Copyright in the EU is under threat!
+sharing_fb_desc_a=I just took action to save Europe’s internet. Will you join me too?
+
+sharing_fb_title_b=EU Copyright is not fit for the digital age
+sharing_fb_desc_b=I helped keep the internet filter-free, by calling an MEP. You can too:
+
+# Will be used as a tweet. Length limit: 116 characters.
+sharing_twitter_a=I just joined @mozilla in keeping the internet filter-free, by calling an MEP to #fixcopyright
+
+# Will be used as a tweet. Length limit: 116 characters.
+sharing_twitter_b=Tell @Europarl_EN: #copyright must aid innovation & creation, not curb it. How? A free call to MEPs:
+
+# Do not use HTML elements
+sharing_email_subject_a=Proposed EU Copyright laws are WRONG
+# Do not use HTML elements
+sharing_email_body_a=Europe’s proposals for copyright reform are not fit for the digital age. Under their new rules, publishers can monitor your uploads, fine you for posting links *and* remove your right to meme. I just called an MEP to tell them to FIX COPYRIGHT! https://www.changecopyright.org/
+
+# Do not use HTML elements
+sharing_email_subject_b=Copyright in the EU is under threat!
+# Do not use HTML elements. Free is used as in “free beer”
+sharing_email_body_b=Copyright laws that promote innovation and creation are key to a healthy internet. Current EU proposals do not reflect this, so I just called an MEP to help save copyright. With Mozilla’s free tool, you can too: https://www.changecopyright.org/
