--- a/locales/en-US/share.properties
+++ b/locales/en-US/share.properties
@@ -34,7 +34,7 @@ share_fb_tooltip=Post to Facebook
 # Alt text for button
 share_twitter_tooltip=Share on Twitter
 
-sharing_fb_internet_title_a=Internet in the EU is under threat!
+sharing_fb_internet_title_a=The internet in the EU is under threat!
 sharing_fb_desc_a=I just took action to save Europe’s internet. Will you join me too?
 
 sharing_fb_title_b=EU Copyright is not fit for the digital age
