Slight copy update (#94)

--- a/locales/en-US/share.properties
+++ b/locales/en-US/share.properties
@@ -34,7 +34,7 @@ share_fb_tooltip=Post to Facebook
 # Alt text for button
 share_twitter_tooltip=Share on Twitter
 
-sharing_fb_title_a=Copyright in the EU is under threat!
+sharing_fb_internet_title_a=The internet in the EU is under threat!
 sharing_fb_desc_a=I just took action to save Europe’s internet. Will you join me too?
 
 sharing_fb_title_b=EU Copyright is not fit for the digital age
@@ -52,6 +52,6 @@ sharing_email_subject_a=Proposed EU Copyright laws are WRONG
 sharing_email_body_a=Europe’s proposals for copyright reform are not fit for the digital age. Under their new rules, publishers can monitor your uploads, fine you for posting links *and* remove your right to meme. I just called an MEP to tell them to FIX COPYRIGHT! https://www.changecopyright.org/
 
 # Do not use HTML elements
-sharing_email_subject_b=Copyright in the EU is under threat!
+sharing_email_internet_subject_b=The internet in the EU is under threat!
 # Do not use HTML elements. Free is used as in “free beer”
 sharing_email_body_b=Copyright laws that promote innovation and creation are key to a healthy internet. Current EU proposals do not reflect this, so I just called an MEP to help save copyright. With Mozilla’s free tool, you can too: https://www.changecopyright.org/
