--- a/locales/en-US/call_tool.properties
+++ b/locales/en-US/call_tool.properties
@@ -24,3 +24,6 @@ call_again=Didn’t get through? {callAgain}
 call_again_link=Try calling again.
 
 whoops_phone_number=Whoops! Make sure you enter your correct phone number.
+
+api_call_error_title=We’re sorry, we seem to be having some trouble. Please try again later.
+try_again=TRY AGAIN
