--- a/locales/en-US/call_tool.properties
+++ b/locales/en-US/call_tool.properties
@@ -25,5 +25,6 @@ call_again_link=Try calling again.
 
 whoops_phone_number=Whoops! Make sure you enter your correct phone number.
 
-unknown_problems=We’re sorry, we seem to be having some trouble. Please try again later.
+unknown_problems=We’re sorry, we seem to be having some trouble.
+please_retry_later=Please try again later.
 try_again=TRY AGAIN
