--- a/locales/de/call_tool.properties
+++ b/locales/de/call_tool.properties
@@ -24,3 +24,7 @@ call_again=Sind Sie nicht durchgekommen? {callAgain}
 call_again_link=Rufen Sie erneut an.
 
 whoops_phone_number=Hoppla! Geben Sie Ihre richtige Telefonnummer ein.
+
+unknown_problems=Ein Fehler ist aufgetreten. Das tut uns leid.
+please_retry_later=Bitte versuchen Sie es später erneut.
+try_again=ERNEUT VERSUCHEN
