Fix Europarl handles

--- a/locales/de/share.properties
+++ b/locales/de/share.properties
@@ -44,7 +44,7 @@ sharing_fb_desc_b=Ich habe einen Abgeordneten des Europäischen Parlaments anger
 sharing_twitter_a=Ich halte mit @mozilla das Internet filterfrei, indem ich einen MdEP anrufe: #fixcopyright
 
 # Will be used as a tweet. Length limit: 116 characters.
-sharing_twitter_b=Sag @Europarl_EN #copyright muss Innovation und Entwicklung stärken, nicht bremsen. Wie? Kostenloser Anruf an MdEPs:
+sharing_twitter_b=Sag @Europarl_DE #copyright muss Innovation und Entwicklung stärken, nicht bremsen. Wie? Kostenloser Anruf an MdEPs:
 
 # Do not use HTML elements
 sharing_email_subject_a=Die Entwürfe zum EU-Urheberrecht sind FALSCH
