--- a/locales/en-US/copyright.properties
+++ b/locales/en-US/copyright.properties
@@ -21,7 +21,7 @@ explanation_title=How will this impact me?
 explanation_technologist=Technologist
 explanation_technologist_desc=The proposal would make sharing and accessing news online more difficult. It would force most online platforms to monitor all content you post — like YouTube videos, Facebook comments, and DeviantArt submissions.
 explanation_creator_innovator=Creator / Innovator
-explanation_creator_innovator_desc=Everyone in Europe should have the right to remix, create parodies, and share their ideas online — all the forms of expression that makes the internet wonderful. The current proposal doesn’t include an exception for everyday user generated content.
+explanation_creator_innovator_desc=Everyone in Europe should have the right to remix, create parodies, and share their ideas online — all the forms of expression that make the internet wonderful. The current proposal doesn’t include an exception for everyday user generated content.
 explanation_scientists_librarian=Scientist / Librarian
 explanation_scientists_librarian_desc=The proposal only allows scientific research institutions to mine text and datasets, but we think more people — like librarians, journalists, and independent scientists — should be able to access the information they need to discover innovative solutions for Europe.
 explanation_learn_more=(Learn more)
