en-US typo only, double period in newsletter_notice

--- a/locales/en-US/copyright.properties
+++ b/locales/en-US/copyright.properties
@@ -31,7 +31,7 @@ join_newsletter_desc=Keep updated on copyright and other issues affecting Intern
 newsletter_placeholder=Email address
 subscrib_button=Subscribe
 signup_checkbox=Yes, I want to receive email updates about Mozilla’s campaigns.
-newsletter_notice=I’m okay with Mozilla handling my info as explained in {linkPrivacyNoticeNewsletter}.
+newsletter_notice=I’m okay with Mozilla handling my info as explained in {linkPrivacyNoticeNewsletter}
 newsletter_link_pn=this Privacy Notice.
 
 # Error messages
