en-US typo, details > detail

--- a/locales/en-US/impact.properties
+++ b/locales/en-US/impact.properties
@@ -41,7 +41,7 @@ creator_innovator_ugc_desc2=Moreover, our open source ethos is being threatened 
 
 creator_innovator_ugc_fight=We believe that including a harmonised, new exception to allow a natural person to use a work in the creation of a new work would help make copyright law future-proof by design, and promote openness and creativity for all of Europe.
 
-creator_innovator_learn_more=For more details, read Communia’s analysis on UGC (in English).
+creator_innovator_learn_more=For more detail, read Communia’s analysis on UGC (in English).
 
 scientist_librarian_section=Scientist / Librarian
 scientist_librarian_article_3_title=Article 3: Text and Data Mining
