--- a/locales/it/copyright.properties
+++ b/locales/it/copyright.properties
@@ -6,7 +6,7 @@ nav_call_now=Chiama ora
 
 main_title_digital_age=Sostieni il diritto d’autore nell’era digitale
 epic_battle_tagline_mep=Fai sentire la tua opinione ai membri del Parlamento europeo.
-main_title_desc_september=Telefona a un membro del Parlamento europeo entro il 28 settembre, spiegagli l’importanza di una legge sul diritto d’autore che promuova un mercato competitivo e l’innovazione online.
+main_title_desc_september=Telefona a un membro del Parlamento europeo entro il 11 ottobre, spiegagli l’importanza di una legge sul diritto d’autore che promuova un mercato competitivo e l’innovazione online.
 
 # Call to action
 call_now_button=CHIAMA ORA
