--- a/locales/pl/call_tool.properties
+++ b/locales/pl/call_tool.properties
@@ -11,7 +11,7 @@ script_step_4=Przeczytaj poniższy tekst:
 
 script_desc_1=„Dzień dobry, nazywam się <b>[imię, nazwisko]</b> i dzwonię z <b>[miasto, kraj]</b>.
 script_desc_2=Chcę porozmawiać o reformie prawa autorskiego. <b>[Korzystam z nowoczesnych technologii, pracuję jako naukowiec, dziennikarz, w bibliotece, tworzę sztukę, itp.]</b> i uważam, że wnioskowana dyrektywa Komisji Europejskiej szkodzi innowacyjności i kreatywności w Unii Europejskiej.
-script_desc_3=Chcę prosić o głosowanie przeciwko artykułowi 11 i 13. <b>[LUB]</b> Proszę o wprowadzenie wyjątku dla treści tworzonych przez użytkowników. Przyszłość innowacyjności w Europie leży w waszych rękach.
+script_desc_3=Chcę prosić o głosowanie przeciwko artykułowi 11 i 13. Przyszłość innowacyjności w Europie leży w waszych rękach.
 script_desc_4=Dziękuję za poświęcony mi czas i zaangażowanie w lepszą dyrektywę o prawie autorskim dla jednolitego rynku cyfrowego w Europie.”
 
 enter_phone_title=Wpisz swój numer telefonu, aby uzyskać natychmiastowe połączenie
@@ -28,4 +28,3 @@ whoops_phone_number=Proszę się upewnić, że wpisano poprawny numer telefonu.
 unknown_problems=Przepraszamy, występują jakieś problemy.
 please_retry_later=Spróbuj ponownie później.
 try_again=SPRÓBUJ PONOWNIE
-
