--- a/locales/en-US/call_tool.properties
+++ b/locales/en-US/call_tool.properties
@@ -11,7 +11,7 @@ script_step_4=Read the script below:
 
 script_desc_1=“Hi, I’m <b>[first name, last name]</b> and I’m from <b>[city, country]</b>.”
 script_desc_2=“I want to discuss the copyright reform. I am a <b>[technologist, creator, scientist, journalist, librarian, artist, etc.]</b> and I believe the European Commission’s proposed copyright directive harms innovation and creativity in the EU.”
-script_desc_3=“Please reject articles 11 and 13” or “Please include an exception for user generated content. The future of European innovation depends on you.”
+script_desc_3=“Please reject articles 11 and 13. The future of European innovation depends on you.”
 script_desc_4=“Thank you for your time and commitment to an improved copyright directive for Europe’s Digital Single Market.”
 
 enter_phone_title=Enter your phone number and get a call back immediately
@@ -27,4 +27,3 @@ whoops_phone_number=Whoops! Make sure you enter your correct phone number.
 unknown_problems=We’re sorry, we seem to be having some trouble.
 please_retry_later=Please try again later.
 try_again=TRY AGAIN
-
