--- a/locales/es/call_tool.properties
+++ b/locales/es/call_tool.properties
@@ -11,7 +11,7 @@ script_step_4=Lee el siguiente texto:
 
 script_desc_1=“Hola, me llamo <b>[nombre, apellido]</b> y soy de <b>[ciudad, país]</b>.”
 script_desc_2=“Quisiera hablar sobre la reforma de los derechos de autor. Soy un <b>[apasionado de las nuevas tecnologías, creador, científico, periodista, bibliotecario, artista, etc.]</b> y creo que la reforma propuesta por la Comisión Europea perjudica la innovación y la creatividad en la UE.”
-script_desc_3=“Por favor, rechace los artículos 11 y 13" o "Incluya por favor una excepción para el contenido generado por el usuario. El futuro de la innovación europea depende de usted."
+script_desc_3=“Por favor, rechace los artículos 11 y 13. El futuro de la innovación europea depende de usted."
 script_desc_4=“Gracias por su tiempo y su compromiso con una directiva mejorada de derechos de autor para el mercado digital único de Europa.”
 
 enter_phone_title=Escribe tu teléfono y recibe una llamada de inmediato
@@ -27,4 +27,3 @@ whoops_phone_number=¡Ups! Asegúrate de que escribes correctamente tu número d
 unknown_problems=Lo sentimos, parece que estamos teniendo algunos problemas.
 please_retry_later=Por favor, vuelve a intentarlo más tarde.
 try_again=INTÉNTALO DE NUEVO
-
