--- a/locales/it/call_tool.properties
+++ b/locales/it/call_tool.properties
@@ -11,7 +11,7 @@ script_step_4=Leggi il copione qui di seguito:
 
 script_desc_1=“Buongiorno, mi chiamo <b>[nome e cognome]</b> e chiamo da <b>[città, nazione]</b>.”
 script_desc_2=“Vorrei discutere con lei della riforma sul diritto d’autore. Io sono un<b> [informatico/autore/ricercatore scientifico/giornalista/documentalista/artista ecc.]</b> e, in quanto tale, ritengo che la direttiva sul diritto d’autore proposta dalla Commissione Europea sia di ostacolo all’innovazione e alla creatività in Europa.”
-script_desc_3=“Le chiedo di respingere gli articoli 11 e 13” oppure “Le chiedo di integrare un’eccezione per i contenuti generati dagli utenti. Il futuro dell’innovazione in Europa è nelle sue mani.”
+script_desc_3=“Le chiedo di respingere gli articoli 11 e 13. Il futuro dell’innovazione in Europa è nelle sue mani.”
 script_desc_4=“La ringrazio infinitamente per il tempo e l’impegno che sta dedicando a migliorare la legge sul diritto d’autore nel Mercato unico digitale europeo.”
 
 enter_phone_title=Inserisci il tuo numero di telefono, sarai richiamato immediatamente
@@ -27,4 +27,3 @@ whoops_phone_number=Assicurati di aver digitato correttamente il numero di telef
 unknown_problems=Si è verificato un errore inatteso. Ci scusiamo per il disagio.
 please_retry_later=Riprova più tardi.
 try_again=RIPROVA
-
