Update title description

--- a/locales/fr/copyright.properties
+++ b/locales/fr/copyright.properties
@@ -7,6 +7,7 @@ nav_call_now=Appeler un député
 main_title_digital_age=Mobilisez-vous pour le droit d’auteur à l’ère du numérique
 epic_battle_tagline_mep=Faites-vous entendre auprès des députés européens.
 main_title_desc_september=Appelez les députés européens avant le 10 octobre et faites-leur savoir que la règlementation sur le droit d’auteur doit promouvoir la concurrence et l’innovation en ligne.
+main_title_desc=Appelez les députés européens et faites-leur savoir que la règlementation sur le droit d’auteur doit promouvoir la concurrence et l’innovation en ligne.
 
 # Call to action
 call_now_button=APPELER MAINTENANT
