--- a/locales/en-US/call_tool.properties
+++ b/locales/en-US/call_tool.properties
@@ -30,4 +30,5 @@ try_again=TRY AGAIN
 we_cannot_call=We can’t call that number. Please choose a country code from the list.
 hourly_limit_reached=Thanks for your calls! You’ve reached the hourly limit. Please try again in an hour.
 closed_for_business=Please note, calling is only available during business hours:
-business_hours=Monday-Friday, 9:00-18:00 CEST
+business_hours_cest=Monday-Friday, 9:00-18:00 CEST
+business_hours_cet=Monday-Friday, 9:00-18:00 CET
