--- a/locales/en-US/call_tool.properties
+++ b/locales/en-US/call_tool.properties
@@ -27,3 +27,8 @@ whoops_phone_number=Whoops! Make sure you enter your correct phone number.
 unknown_problems=We’re sorry, we seem to be having some trouble.
 please_retry_later=Please try again later.
 try_again=TRY AGAIN
+we_cannot_call=We can’t call that number. Please choose a country code from the list.
+hourly_limit_reached=Thanks for your calls! You’ve reached the hourly limit. Please try again in an hour.
+closed_for_business=Please visit this page during business hours to connect your call:
+business_hours_cest=Monday-Friday, 9:00-18:00 CEST.
+business_hours_cet=Monday-Friday, 9:00-18:00 CET.
