--- a/locales/en-US/copyright.properties
+++ b/locales/en-US/copyright.properties
@@ -47,3 +47,11 @@ follow=Follow
 legal=Legal
 privacy=Privacy
 donate=Donate
+
+# Modal
+love_the_web=We all love the web.
+join_the_defense=Join Mozilla in defending it.
+save_the_future=The future of the Internet is at stake, with new threats to our online privacy and security almost every day.
+mozilla_fights=Mozilla fights to save a healthy Internet, with grassroots advocacy work and software that enables the open web.
+please_donate=As a non-profit we rely on your support, so please donate today.
+donate_now=DONATE NOW
