Update call script and homepage text

--- a/locales/en-US/call_tool.properties
+++ b/locales/en-US/call_tool.properties
@@ -12,8 +12,10 @@ script_step_4=Read the script below:
 script_desc_1=“Hi, I’m <b>[first name, last name]</b> and I’m from <b>[city, country]</b>.”
 script_desc_2=“I want to discuss the copyright reform. I am a <b>[technologist, creator, scientist, journalist, librarian, artist, etc.]</b> and I believe the European Commission’s proposed copyright directive harms innovation and creativity in the EU.”
 script_desc_2b=“I want to discuss the copyright reform. I am a <b>[technologist, creator, scientist, journalist, librarian, artist, etc.]</b> and I believe the European Parliament’s position on the proposed copyright directive seriously harms innovation and creativity in the EU.”
+script_desc_2c=“I’m calling you today to ask that you please reject articles 11 and 13 of the proposed EU Copyright directive.”
 script_desc_3=“Please reject articles 11 and 13. The future of European innovation depends on you.”
 script_desc_3b=“Please reject article 13. The future of European innovation depends on you.”
+script_desc_3c=“Can you please urge your colleagues to do the same? The future of the open internet in Europe depends on you!”
 script_desc_4=“Thank you for your time and commitment to an improved copyright directive for Europe’s Digital Single Market.”
 
 enter_phone_title=Enter your phone number and get a call back immediately
