--- a/locales/en-US/copyright.properties
+++ b/locales/en-US/copyright.properties
@@ -14,6 +14,7 @@ cta_tagline_calling=We’ll provide you with what to say before calling.
 
 # This will replace the main call to action, since the call tool is now switched off
 next_steps_announcement=Good news: because of your calls, the European Parliament voted against the proposals that would’ve dealt a hammer blow to the open internet. We’re picking the fight back up in September when the proposals are re-drafted, and you can <a href="https://www.mozilla.org/newsletter/mozilla/">subscribe to our newsletter</a> to get updated on the next steps. We hope we can count on your support again then. Thank you!
+next_steps_implementation=Copyright is back on the agenda in the European Parliament. Will you call Members of the European Parliament, tell them we need copyright laws that promote competition & innovation online?
 
 # {ctaTosLink} will be replaced with cta_link_tos translation and {ctaPpLink} will be replaced with cta_link_pp translation.
 cta_disclaimer=We will only use your phone number to make this call. Find out more about {ctaTosLink} and {ctaPpLink}
